themes/startwords/assets/scss/print.scss
// print styles
@import 'variables';

@page {
  size: letter;
  margin: 0.75in 0.2in 0.57in 0.2in;

  @top-left {
    content: string(title);
    font-weight: 300;
    font-size: 11px;
    font-family: $font-serif;
  }

  @top-right {
    content: element(page-header);
    opacity: 1;
  }

  @bottom-left {
    content: element(page-footer);
    opacity: 1;
    font-size: 11px;
    font-weight: 300;
  }


  @bottom-right {
    content: counter(page);
    font-size: 11px;
    font-weight: 300;
  }
}

@page :first {
    /* don't display article title on first page */
    @top-left {
        content: '';
    }
    @top-right {
        content: element(first-page-header);
    }
}


body {
    font-family: $font-serif;
    font-size: 12px;
    line-height: 18px;

    &.article article {
        margin-top: 0;

        .grid {
            padding: 0;
        }

        header {
            margin-bottom: 0.5rem;

            .number, .theme, .authors, .doi, .tags, time {
                font-family: $font-sans;
                font-size: 14px;
            }

            .number {
                margin: 0 0 6px 0;
                padding: 0;
                font-weight: 300;
                line-height: 18px;
            }

            .authors {
                font-weight: 300;
            }

            .theme {
                padding: 0;
            }

        }
        h1 {
            margin-top: 0;
        }

        p {
            line-height: 18px;
            margin: 0 0 18px;
            margin-top: 0;
            padding: 0;
        }

        blockquote.pull {
            /* width: 50%; */
            width: 66%;  /* wider makes it easier to flow content */
            margin-top: 0;
            line-height: 22px;
            font-size: 16px;
            page-break-inside: avoid;

            &.left {
                margin-right: 16px;
            }

            &.right {
                margin-left: 16px;
            }

            /* when a pull quote falls near a page break,
              pagedjs pagination renders an empty blockquote, which displays
              the background framing images; suppress empty pull quotes. */
            &:empty {
                display: none;
            }
        }

        figcaption { font-size: 12px; }

        figure {
            page-break-inside: avoid;
        }
    }
}

main {
    margin: auto;
    width: 5.51in;
    background: white;

    /* weasyprint doesn't support grid anyway, but explicitly ignore it */
    .grid {
        display: block;
        margin: 0;
        padding: 0;
    }

    section.footnotes, .force-page-break {
        page-break-before: always;
    }

    h1, h2, h3, h4, h5, h6 {
        font-family: $font-serif;
        font-weight: bold;
        margin: 0;
        padding: 0;
    }

    h1 {
        string-set: title content();
        font-size: 16px;
        line-height: 30px;
    }

    h2 {
        font-size: 14px;
        line-height: 21px;
    }

    h3 {
        font-size: 14px;
        line-height: 30px;
        font-weight: 500;
        margin: 16px 0 6px;
    }
}


.print-only {
    display: block;
    /* hide for pinting in browsers that don't support @page styles */
    opacity: 0;
}

a.page-header {
    position: running(page-header);
}
a.first-page-header {
    position: running(first-page-header);
}

a.article-title {
    position: running(header-title);
}

a.page-doi {
    position: running(page-footer);
}


body.article .footnotes {
    background-color: white;
    margin: 9px 0 0;
    bookmark-level: 2;
    bookmark-label: "Notes";

    hr {
        display: none;
    }

    ol {
        list-style: decimal inside;

        li {
            background: white;
            font-size: 12px;
            line-height: 18px;
            position: relative;

            /** NOTE: counters are not incrementing when generating PDFs with
              pagedjs (all endnotes are numbered 0). As a workaround,
              display the list marker and style it as close as possible
              to the design specification */
            &::before {
                display: none !important;
            }
            &::marker {
                color: $red;
                font-family: $font-serif;
                font-weight: bold;
                font-size: rem(35px);
            }
             p:first-child {
                /* move first paragraph up to compensate for inside list marker
                   placement. */
                margin-top: -1rem;
            }
        }
    }

    &.endnotes ol li { background: white; }
}


// a::after { content: ", see " target-text(attr(href)) }

body > header, nav, footer, a[rel=alternate] {
    display: none;
}


a.footnote-ref {
    padding: 0;
    margin: 0;
    z-index: 5;
    font-weight: 400;

    &::after {
        content: '';
        display: none;
    }
}

sup {
    line-height: 1;
}

/* Generate bookmarks for PDF table of contents) based on headings.
   Adapted from weasyprint default print css.
   NOTE: not currently supported by paged.js
*/
h1, h2, h3, h4, h5, .help {
    page-break-after: avoid;
    page-break-inside: avoid;
    bookmark-label: content(text);
}
h1 { bookmark-level: 1; }
h2 { bookmark-level: 2; }
h3 { bookmark-level: 3; }
h4 { bookmark-level: 4; }
h5 { bookmark-level: 5; }
h6 { bookmark-level: 6; }

/* sketchfab embed & deep zoom do not render in PDF; use previews instead */
body.article article {
    .sketchfab-embed-wrapper iframe,
    .video-embed-wrapper iframe,
    .video-embed-wrapper > div,
    .deepzoom, .kaltura {
        display: none;
    }

    .sketchfab-embed-wrapper .preview,
    .deepzoom-preview, .print-only-preview,
    .video-embed-wrapper .preview {
        display: block;
    }

    /* for now, assume video in figure has a pdf preview images */
    figure video {
        display: none;
    }

}

iframe {
    overflow: visible;
    height: auto;
    page-break-inside: avoid;
}

.twitter-tweet {
    // page-break-inside: avoid;
    /* disabling and using images because tweets do not render well */
    display: none !important;  /* override twitter inline styles */
}

/* display groups of tweets at half-width in two columns */
.tweet-group, .tweet-group.print-only-preview {
    /* grid not supported by paged.js and other print css tools */
    /*
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 10px;
    justify-content: space-between; */

    display: flex !important;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: flex-start;
    justify-content: space-between;

    // .twitter-tweet {
    a {
        width: 48%;
        display: inline-block;

        img {
            /* image should take up full width of the half-width link */
            width: 100%;
        }

        &:nth-child(odd) {
            margin-right: 10px;
        }
    }

    /* center tweets that appear by themselves */
    a:only-child {
        width: 60%;
        margin-left: 20%;
    }
}

